  DAQManager parameter.
    - We can have a field for setting it in the Settings panel.
- Should Geometry's run number be coming from the conf file or system time?
- Should we be reading/writing the time correction?
- Some Plot members are not copied in the copy constructor.

-------------------------------------------------------------------------------

## 2024-04-25

## Added

- RunView now displays the number of 'Passing Events', which are the events 
  that pass RecoUtility::CheckEvent().

## Changed

- DAQData::clear() now called before anything else is done with it on the start
  of a new data run.
- The eventDisplay is now cleared within DAQData::clear().
- The first update after the creation of a tab is now performed by TabPanel.cpp
  instead of in the tab constructor. Tabs no longer need to include a call to
  update in the constructor.

## Fixed

- Fixed issue where hits and tracks would not be drawn if any Update() call was
  performed on the EventTab's canvas outside of EventDisplay::Draw().

-------------------------------------------------------------------------------

## 2024-04-24

## Summary

- Display side of the event display tab is now functional.

## Added

- MUON_RECO -- Added slope() and y_int() functions to TrackParam
            -- Track.h/cxx -- Switched to angle-intercept representation from
               slope-intercept representation. Removed slope getters/setters
               in favor of angle getters/setters

- Added distinct version of MuonReco/EventDisplay that do not include a canvas
  automatically. The new version was stripped down and heavily modifed.
- Drafted implementation of EventDisplay tab.
- Added autoplay feature to EventDisplay tab.

## Changed

- EventDisplay modified to reflect Track.h's switch to angle-intercept 
  representation.
- Plots::nMiss changed to Plots::nTotal, with implementation altered to match
  the semantics.
- EventDisplay::hit_model and EventDisplay::track_model are now local to the